# anki-card-gen

./: .gitignore  Cargo.toml
anki/: back_template.html  style.css
src/: lookup.rs  main.rs
words/: adjectif.txt  clothings.txt  colors.txt  countries.txt  descriptors.txt  family.txt  foods.txt  nom.txt  noun-adj.txt  phrase.txt.bak  places.txt  school.txt  subjects.txt  temps.txt  time.txt  verb.txt
