[package]
name = "anki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tl = "0.7"
syn = "1.0.50"  # Newest version gives linker errors
tokio = "1.21"
regex = "1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url-escape = "0.1"
